# dndm

./: README.md  setup.cfg
src/dndm/: __init__.py  cli.py  defi.py
src/dndm.egg-info/: PKG-INFO  SOURCES.txt
