[metadata]
name = dndm
version = 0.1.1
description = A Dungeons and Dragons CLI tool 
long_description = file: README.md
long_description_content_type = text/markdown
author = Ophelia Van Wye
license = MIT

[options]
package_dir =
    = src
packages = find:
install_requires =
    click

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dndm = dndm.cli:main